--- a/schedule_ui/src/components/high-level-sections/high-level-sections.scss
+++ b/schedule_ui/src/components/high-level-sections/high-level-sections.scss
@@ -2,6 +2,10 @@
   .section {
     border: 1px solid black;
     max-width: unset;
-    height: 40px;
+    height: 60px;
+
+    &.empty {
+      border: 0;
+    }
   }
 }
