--- a/schedule_ui/src/components/title/title.scss
+++ b/schedule_ui/src/components/title/title.scss
@@ -3,13 +3,13 @@
 .title {
   text-align: center;
   margin-bottom: 3rem;
-  font-size: 1.4rem;
-  color: $color-grey-dark;
+  font-size: 2rem;
+  color: $color-grey-dark-3;
 }
 
 .date_picker {
-  font-size: 0.9rem;
-  color: #545454;
+  font-size: 1.1rem;
+  color: $color-grey-dark-3;
   border: 1px solid $color-grey-dark;
   border-radius: 5px;
 }
