--- a/schedule_ui/src/components/calendar/calendar.scss
+++ b/schedule_ui/src/components/calendar/calendar.scss
@@ -1,7 +1,13 @@
 .calendar {
+  position: sticky;
+  top: 65px;
+  background: #dee2e6;
+  font-size: 1.1rem;
+  font-weight: 550;
+
   &-cell {
     width: 60px;
-    height: 60px;
+    height: 65px;
     border: 1px solid black;
 
     &.fluid {
