reduce cell size

--- a/schedule_ui/src/components/timeline/timeline.scss
+++ b/schedule_ui/src/components/timeline/timeline.scss
@@ -6,6 +6,12 @@
 
   &-left {
     max-width: max-content;
+
+    &::after {
+      content: "";
+      display: block;
+      width: 500px;
+    }
   }
 }
 
