--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -1,11 +1,11 @@
 .units-grid {
   &-title {
     height: 120px;
-    background: #dee2e6;
+    background: #f2f3f2;
     border: 1px solid #000;
     font-size: 22px;
     position: sticky;
-    top: 0;
+    top: 60px;
   }
 
   .unit {
