change colors, fix hight level section length

--- a/schedule_ui/src/components/high-level-sections/high-level-sections.scss
+++ b/schedule_ui/src/components/high-level-sections/high-level-sections.scss
@@ -3,7 +3,7 @@
     border: 1px solid black;
     max-width: unset;
     height: 60px;
-    background: #343a40;
+    background: #95999c;
     color: #fff;
     font-weight: 600;
     font-size: 1.3rem;
