--- a/schedule_ui/src/components/unit-event-row/unit-event-row.scss
+++ b/schedule_ui/src/components/unit-event-row/unit-event-row.scss
@@ -2,7 +2,7 @@
   &-cell {
     width: 60px;
     height: 60px;
-    border: 1px solid black;
+    border: 1px solid #95999c;
     cursor: pointer;
   }
 }
