--- a/schedule_ui/src/components/high-level-sections/high-level-sections.scss
+++ b/schedule_ui/src/components/high-level-sections/high-level-sections.scss
@@ -3,9 +3,8 @@
     border: 1px solid black;
     max-width: unset;
     height: 60px;
-    background: #95999c;
-    color: #fff;
-    font-weight: 600;
+    background: #fff;
+    // color: #000;
     font-size: 1.3rem;
 
     &.empty {
