--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -15,6 +15,11 @@
     flex-grow: 1;
     padding: 0 15px;
     min-width: 160px;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.8;
+    }
 
     &-last-generation {
       height: 60px;
