--- a/schedule_ui/src/components/high-level-sections/high-level-sections.scss
+++ b/schedule_ui/src/components/high-level-sections/high-level-sections.scss
@@ -10,6 +10,7 @@
     &.empty {
       background: #f2f3f2;
       border: 0;
+      border-top: 1px solid #000;
 
       &:last-child {
         border-right: 1px solid black;
