--- a/schedule_ui/src/components/event-calendar/event-calendar.scss
+++ b/schedule_ui/src/components/event-calendar/event-calendar.scss
@@ -14,9 +14,9 @@
   }
 
   &-cell {
-    width: 61px;
+    width: 36px;
     height: 60px;
-    border: 1px solid #95999c;
+    border: 1px solid #e2e2e2;
     margin: -1px 0 0 -1px;
     cursor: pointer;
 
