--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -7,9 +7,11 @@
     position: sticky;
     top: 60px;
     box-shadow: 0 -60px 0 0 #fff;
+    z-index: 2;
   }
 
   .unit {
+    position: relative;
     border: 1px solid #95999c;
     margin: -1px 0 0 -1px;
     flex-grow: 1;
@@ -17,18 +19,38 @@
     min-width: 160px;
     cursor: pointer;
 
+    &-actions {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      display: none;
+      background-color: white;
+
+      .unit {
+        &-add,
+        &-remove,
+        &-edit {
+          &:hover {
+            background-color: #f5f5f5;
+          }
+        }
+      }
+    }
+
     &:hover {
       opacity: 0.8;
       background-color: #f3f3f3;
+
+      .unit-actions {
+        display: flex;
+      }
     }
 
     &-last-generation {
       height: 60px;
     }
-
-    // &-last-of-group:not(:last-child) {
-    // box-shadow: 0 1px 0 #357ddb;
-    // }
 
     &-last-of-group:hover {
       box-shadow: 0 0 2px 1px var(--primary);
