--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -17,7 +17,6 @@
     flex-grow: 1;
     padding: 0 15px;
     min-width: 160px;
-    cursor: pointer;
 
     &-actions {
       position: absolute;
@@ -32,6 +31,7 @@
         &-add,
         &-remove,
         &-edit {
+          cursor: pointer;
           &:hover {
             background-color: #f5f5f5;
           }
@@ -55,6 +55,10 @@
     &-last-of-group:hover {
       box-shadow: 0 0 2px 1px var(--primary);
       border-color: #ececec;
+    }
+
+    &-new {
+      cursor: pointer;
     }
   }
 }
