--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -28,9 +28,7 @@
       background-color: white;
 
       .unit {
-        &-add,
-        &-remove,
-        &-edit {
+        &-action {
           cursor: pointer;
           &:hover {
             background-color: #f5f5f5;
