--- a/schedule_ui/src/components/header/header.scss
+++ b/schedule_ui/src/components/header/header.scss
@@ -11,6 +11,10 @@
     font-size: 1.25em;
     font-weight: 600;
   }
+  .logo {
+    width: 80px;
+    height: 40px;
+  }
   .date_picker {
     // font-size: .95rem;
     color: $color-grey-dark-3;
