make fixes add placeholders period popup

--- a/schedule_ui/src/components/header/header.scss
+++ b/schedule_ui/src/components/header/header.scss
@@ -12,11 +12,11 @@
     font-weight: 600;
   }
   .logo {
-    width: 80px;
-    height: 40px;
+    width: 55px;
+    height: 30px;
+    margin-right: 5px;
   }
   .date_picker {
-    // font-size: .95rem;
     color: $color-grey-dark-3;
     border: 1px solid $color-grey-dark;
     border-radius: 5px;
