--- a/schedule_ui/src/components/home/home.scss
+++ b/schedule_ui/src/components/home/home.scss
@@ -2,8 +2,7 @@
   color: blue;
 }
 
-.main {
-  min-height: 75vh;
+.emblem-background {
   background-image: linear-gradient(
       to right bottom,
       rgba(#fff, 0.85),
