#53 [UI] - События, implement duration input (number type)

--- a/schedule_ui/src/components/event-calendar/event-calendar.scss
+++ b/schedule_ui/src/components/event-calendar/event-calendar.scss
@@ -46,6 +46,8 @@
 
   .sub-text {
     color: #606060;
-    font-size: 0.9em;
+    font-size: 0.8em;
+    float: right;
+    font-style: italic;
   }
 }
