--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -40,6 +40,14 @@
     padding: 0 15px;
     min-width: 160px;
 
+    &-flag {
+      position: absolute;
+      left: 5px;
+      top: 5px;
+      width: 20px;
+      height: 20px;
+    }
+
     &-actions {
       position: absolute;
       left: 0;
