#61 [UI] - Добавить возможность переключения между графиками (#72)

--- a/schedule_ui/src/app.scss
+++ b/schedule_ui/src/app.scss
@@ -55,3 +55,15 @@ body,
   size: A3 landscape;
   bleed: 1;
 }
+
+.emblem-background {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(#fff, 0.85),
+      rgba(#fff, 0.85)
+    ),
+    url(force_emblem.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
