--- a/schedule_ui/src/components/event-calendar/event-calendar.scss
+++ b/schedule_ui/src/components/event-calendar/event-calendar.scss
@@ -7,6 +7,10 @@
   font-weight: bold;
   cursor: pointer;
 
+  &:focus {
+    border-bottom: 2px solid #007bff;
+  }
+
   &-flag-container {
     position: absolute;
 
