--- a/schedule_ui/src/components/event-types/event-types.scss
+++ b/schedule_ui/src/components/event-types/event-types.scss
@@ -1,23 +1,10 @@
+@import "variables.scss";
+
 .event-type-list {
   max-height: 79vh;
   overflow-y: scroll;
 
-  &::-webkit-scrollbar {
-    width: 5px;
-  }
-  &::-webkit-scrollbar-track {
-    background: #fff;
-  }
-  &::-webkit-scrollbar-thumb {
-    background: #c3c3c3;
-    visibility: hidden;
-  }
-
-  &:hover {
-    &::-webkit-scrollbar-thumb {
-      visibility: visible;
-    }
-  }
+  @include customScroll;
 }
 
 .event-type {
