--- a/schedule_ui/src/components/last-events-list/last-events-list.scss
+++ b/schedule_ui/src/components/last-events-list/last-events-list.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 .last-events-list-icon {
   cursor: pointer;
 }
@@ -13,22 +15,7 @@
   max-height: 50vh;
   overflow-y: scroll;
 
-  &::-webkit-scrollbar {
-    width: 5px;
-  }
-  &::-webkit-scrollbar-track {
-    background: #fff;
-  }
-  &::-webkit-scrollbar-thumb {
-    background: #c3c3c3;
-    visibility: hidden;
-  }
-
-  &:hover {
-    &::-webkit-scrollbar-thumb {
-      visibility: visible;
-    }
-  }
+  @include customScroll;
 
   .event-title {
     font-size: 0.85em;
