--- a/schedule_ui/src/components/event-calendar/event-calendar.scss
+++ b/schedule_ui/src/components/event-calendar/event-calendar.scss
@@ -16,13 +16,26 @@
     cursor: pointer;
 
     .flag {
-      width: 35px;
-      height: 35px;
+      align-self: center;
+      width: 25px;
+      height: 25px;
     }
 
-    .location {
+    .location-img {
+      align-self: center;
       width: 35px;
-      height: 20px;
+      height: 15px;
+    }
+
+    .location-name {
+      color: #333;
+      text-transform: capitalize;
+      position: relative;
+      font-size: 0.6em;
+      font-weight: 600;
+      left: 6px;
+      max-width: 35px;
+      line-height: 10px;
     }
   }
 
