--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -20,7 +20,7 @@
       height: 60px;
       position: relative;
       top: -60px;
-      // border: 1px solid #333;
+      border-left: 1px solid #333;
       margin: -1px;
     }
   }
