--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -20,7 +20,7 @@
       height: 60px;
       position: relative;
       top: -60px;
-      border-left: 1px solid #333;
+      border-left: 1px solid #95999c;
       margin: -1px;
     }
   }
@@ -29,8 +29,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    // margin-top: -60px;
-    // flex: 1;
     height: 100%;
 
     &:not(&-static) {
