transfer unit popup to useForm hook

--- a/schedule_ui/src/components/units-grid/units-grid.scss
+++ b/schedule_ui/src/components/units-grid/units-grid.scss
@@ -60,6 +60,7 @@
       width: 121px;
       border-bottom: 1px solid #95999c;
       border-left: 1px solid #95999c;
+      cursor: pointer;
     }
 
     &-flag {
